--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,12 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- Profile Photo (placeholder) -->
+      <!-- Updated src path -->
       <img 
-        src="https://via.placeholder.com/150" 
-        alt="Profile Picture" 
+        src="public/your-image-link.jpg.jpeg" 
+        alt="Nimrod Shavit and wife" 
         class="rounded-circle mb-3"
+        style="width: 200px; height: 200px; object-fit: cover;"
       />
       <h1>Nimrod Shavit</h1>
       <p class="lead">Ph.D. in Communication | Lecturer, Editor, and Mentor</p>
@@ -158,7 +159,6 @@
             preparation.
           </p>
         </div>
-        
       </div>
     </div>
   </section>
@@ -283,8 +283,17 @@
       <hr />
       <ul class="list-unstyled mt-3">
         <li><strong>Address:</strong> Yosefzon 6, Rehovot, Israel</li>
-        <li><strong>Phone:</strong> +1-547-937-755 (USA format assumed)</li>
-        <li><strong>Email:</strong> <a href="mailto:nshavit@protonmail.ch">nshavit@protonmail.ch</a></li>
+        <li><strong>Phone:</strong> +1-547-937-755</li>
+        <li><strong>Email:</strong> 
+          <a href="mailto:nshavit@protonmail.ch">nshavit@protonmail.ch</a>
+        </li>
+        <li class="mt-3">
+          <strong>My Wife's Profile:</strong> 
+          <!-- Replace '#' with your wife's actual profile URL -->
+          <a href="#" target="_blank">
+            View Profile
+          </a>
+        </li>
       </ul>
     </div>
   </section>
@@ -302,5 +311,6 @@
   </script>
 </body>
 </html>
+
 
 
