--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- Updated src path -->
+      <!-- IMPORTANT: The image path below must match your file name in /public -->
       <img 
         src="public/your-image-link.jpg" 
         alt="Nimrod Shavit and wife" 
@@ -126,7 +126,7 @@
           <h6 class="text-muted">Stetson University, FL</h6>
           <p>
             Taught courses in Communication and Media Studies, focusing on 
-            intercultural communication and social interaction.  
+            intercultural communication and social interaction.
           </p>
         </div>
         
