--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <!-- IMPORTANT: The image path below must match your file name in /public -->
       <img 
-        src="public/your-image-link.jpg" 
+        src="your-image-link.jpg" 
         alt="Nimrod Shavit and wife" 
         class="rounded-circle mb-3"
         style="width: 200px; height: 200px; object-fit: cover;"
