--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,11 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- IMPORTANT: The image path below must match your file name in /public -->
+      <!-- Removed inline style and added a custom class for the image -->
       <img 
         src="image.jpg" 
         alt="Nimrod Shavit and wife" 
-        class="rounded-circle mb-3"
-        style="width: 200px; height: 200px; object-fit: cover;"
+        class="rounded-circle hero-image mb-3"
       />
       <h1>Nimrod Shavit</h1>
       <p class="lead">Ph.D. in Communication | Lecturer, Editor, and Mentor</p>
@@ -311,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
