--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- Removed inline style and added a custom class for the image -->
+      <!-- Replace "image.jpg" with your actual file name -->
       <img 
         src="image.jpg" 
         alt="Nimrod Shavit and wife" 
@@ -310,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
