remove circle from image

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       <img 
         src="image.jpg" 
         alt="Nimrod Shavit and wife" 
-        class="rounded-circle hero-image mb-3"
+        class="hero-image mb-3"
       />
       <h1>Nimrod Shavit</h1>
       <p class="lead">Ph.D. in Communication | Lecturer, Editor, and Mentor</p>
@@ -310,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
