--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nimrod Shavit - Academic Profile</title>
   
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS (optional, but included in your original code) -->
   <link 
     rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -47,6 +47,7 @@
   <header class="hero text-center text-white py-5">
     <div class="container">
       <!-- Replace "image.jpg" with your actual file name -->
+      <!-- No circle, no max-width, no cropping: displays actual image size -->
       <img 
         src="image.jpg" 
         alt="Nimrod Shavit and wife" 
