--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   
   <!-- Bootstrap CSS -->
   <link 
-    rel="stylesheet" 
+    rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
   />
   
@@ -46,9 +46,9 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- IMPORTANT: Replace "image.jpg" with your actual file name/path -->
+      <!-- IMPORTANT: Replace "headshot.jpg" with your actual file name/path -->
       <img 
-        src="image.jpg" 
+        src="headshot.jpg" 
         alt="Nimrod Shavit and wife" 
         class="hero-image mb-3"
       />
@@ -310,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
