--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <!-- IMPORTANT: Replace "headshot.jpg" with your actual file name/path -->
       <img 
-        src="headshot.jpg" 
+        src="image.jpg" 
         alt="Nimrod Shavit and wife" 
         class="hero-image mb-3"
       />
