--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       <!-- IMPORTANT: Replace "headshot.jpg" with your actual file name/path -->
       <img 
         src="image.jpg" 
-        alt="Nimrod Shavit and wife" 
+        alt="Nimrod Shavit" 
         class="hero-image mb-3"
       />
       <h1>Nimrod Shavit</h1>
