--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- IMPORTANT: Replace "headshot.jpg" with your actual file name/path -->
+      <!-- Image will display full-size without cropping -->
       <img 
         src="image.jpg" 
         alt="Nimrod Shavit" 
