--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <!-- Hero / Header -->
   <header class="hero text-center text-white py-5">
     <div class="container">
-      <!-- Image will display full-size without cropping -->
+      <!-- Image -->
       <img 
         src="image.jpg" 
         alt="Nimrod Shavit" 
